# fast-mmd

./: .gitignore  README.md  index.html  mac-fix-damaged.command  package-lock.json  package.json  rewrite_mainapp.py  rewrite_models.py  version.json  vite.config.js
.github/scripts/: lanzou_upload.py
.github/workflows/: build.yml
public/: manifest.json
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/utils/: api.js  deploy.js  models.js  store.js
src/views/: DeployWizard.vue  Diagnostics.vue  MainApp.vue
