[package]
name = "fast-mmd"
version = "1.0.0"
description = "AI全自动部署 - AI API Platform Launcher"
authors = ["2bbb.cn"]
edition = "2021"

[lib]
name = "fast_mmd_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
reqwest = { version = "0.12", features = ["json", "blocking"] }
flate2 = "1"
base64 = "0.22"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[features]
custom-protocol = ["tauri/custom-protocol"]
